--- a/ex1.html
+++ b/ex1.html
@@ -18,5 +18,19 @@
 
 <img src="http://www.cuhk.edu.hk/english/images/cuhk_logo_2x.png"></img>
 
+<ul>
+   <li>apples
+      <ul>
+         <li>golden delicious</li>
+         <li>granny smith</li>
+         <li>gala</li>
+      </ul>
+   </li>
+   <li>oranges</li>
+   <li>pineapples</li>
+   <li>mangoes</li>
+   <li>dragonfruit</li>
+</ul>
+
 </body>
 </html>
