--- a/ex1.html
+++ b/ex1.html
@@ -18,7 +18,7 @@
 
 <img src="http://www.cuhk.edu.hk/english/images/cuhk_logo_2x.png"></img>
 
-<ul>
+<ol>
    <li>apples
       <ul>
          <li>golden delicious</li>
@@ -30,7 +30,35 @@
    <li>pineapples</li>
    <li>mangoes</li>
    <li>dragonfruit</li>
-</ul>
+</ol>
+<br>
+
+<table border=1>
+   <tr>
+      <th>Month</th>
+      <th>Rent</th>
+      <th>Utilities</th>
+      <th>Groceries</th>
+      <th>Eating Out</th>
+      <th>Entertainment</th>
+   </tr>
+   <tr>
+      <td>August</td>
+      <td>$1500</td>
+      <td>$150</td>
+      <td>$350</td>
+      <td>$100</td>
+      <td>$50</td>
+   </tr>
+   <tr>
+      <td>September</td>
+      <td>$6900</td>
+      <td>$420</td>
+      <td>$356</td>
+      <td>$911</td>
+      <td>$918</td>
+   </tr>
+</table>
 
 </body>
 </html>
